# JdeRobot

./: .gitignore  CMakeLists.txt
src/stable/components/ardrone_server/: ardrone_interfaces.cfg
src/stable/components/ardrone_server/src/: ardrone_driver.cpp
src/stable/components/gazeboserver/plugins/quadrotor/: CMakeLists.txt  imuplugin.cc  imuplugin.h  poseplugin.cc  quadrotorplugin.cc  quadrotorplugin.hh  togglecamplugin.cc
src/stable/components/gazeboserver/plugins/quadrotor/interfaces/: navdatai.cpp  pose3di.cpp  pose3di.h
src/stable/components/gazeboserver/plugins/quadrotor2/: CMakeLists.txt
src/stable/components/gazeboserver/plugins/quadrotor2/include/quadrotor/interfaces/: cameraibase.h  pushcamerai.h
src/stable/components/gazeboserver/plugins/quadrotor2/src/interfaces/: pushcamerai.cpp
src/stable/components/introrob_py/: CMakeLists.txt  introrob_py.cfg
src/stable/components/introrob_py/sensors/: sensor.py
src/stable/components/introrob_qt/robot/: actuators.cpp  actuators.h  sensors.cpp  sensors.h
src/stable/components/refereeViewer/: CMakeLists.txt
src/stable/components/visualHFSM/: visualhfsm.cpp
src/stable/interfaces/: CMakeLists.txt  slice2cpp.cmake  slice2java.cmake  slice2python.cmake
src/stable/interfaces/pushinterfaces/: CMakeLists.txt
src/stable/interfaces/pushinterfaces/include/jderobot/interfaces/: camerabaseimpl.h  imageproviderimpl.h  pushcameraimpl.h  pushimageproviderimpl.h
src/stable/interfaces/pushinterfaces/src/: camerabaseimpl.cpp  imageproviderimpl.cpp  pushcameraimpl.cpp  pushimageproviderimpl.cpp
src/stable/interfaces/slice/jderobot/interfaces/: camera.ice  image.ice
