if( ICE_PY_MODULES AND NUMPY_MODULES AND MATPLOTLIB_PY_MODULES)
	#instal	
	INSTALL (FILES refereeViewer.py refereeViewer.cfg
		DESTINATION share/jderobot/python/refereeViewer
		OPTIONAL
		PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE WORLD_READ
	)
	INSTALL (FILES refereeViewer DESTINATION bin OPTIONAL PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE WORLD_READ)

endif(ICE_PY_MODULES AND NUMPY_MODULES AND MATPLOTLIB_PY_MODULES)
